projects/varying_degrees/styles/components/_chart-module.scss
$logo-width: 100px;
.chart-module {
	width: 70%;
	display: table-cell;
	vertical-align: top;
	padding-left: 25px;
	position: relative;

	&.mobile {
		width: 100%;
		display: block;
		padding-left: 0px;
	}

	&.embed-generator {
		padding: 25px;
	}
	
	&__header {
	}

	&__body {

	}

	&__title-block {
		padding: 0px 0px 25px;
		&__title {
			color: palette-get(na-black);
			font-size: 20px;
			margin-bottom: 0px;
			padding-right: 45px;
		}
	}

	&__footer {
		border-top: 1px solid palette-get(na-black-10);
		padding-top: 10px;
		&__note {
			font-size: 12px;
			font-style: italic;
			color: palette-get(na-black-40);
			width: calc(100% - #{$logo-width});
			display: inline-block;
			padding-right: 20px
		}

		&__image {
			width: $logo-width;
			display: inline-block;
			cursor: pointer;
			* {
				fill: palette-get(na-black);
			}

			&:hover {
				* {
					fill: palette-get(na-black-30);
				}
			}
		}
	}

	&__charts {
		padding: 20px 0px 0px;

		.embed-generator & {
			padding: 0px;
		}
	}

	&__subquestion-heading {
		font-weight: bold;
		color: palette-get(na-black);
		font-size: 16px;
		padding: 0px 45px 10px 0px;

		&__total-count {
			font-weight: normal;
			color: palette-get(na-black-40);
			padding-left: 5px;
			font-size: 12px;
		}
	}

	&__chart-container {
		position: relative;
		padding-bottom: 20px;
	}

	&__share {
		position: absolute;
		top: 0px;
		right: 0px;

		.has-subquestions & {
			top: -6px;
		}

		&__button {
			position:relative;
			display: inline-block;
			right: 0px;
			border-bottom: none;
			padding-bottom: 0px;

			& * {
				fill: palette-get(na-black-30);
			}

			&:hover {
				* {
					fill: palette-get(na-black);
				}
			}

			&.embed {
				width: 17px;
				margin-right: 7px;
				top: 0px;

				.has-subquestions & {
					width: 15px;
				}
			}

			&.download {
				width: 15px;
				top: 1.5px;

				.has-subquestions & {
					width: 12px;
				}
			}
		}

		&__embed-popup {
			position: absolute;
			right: 0px;
			background-color: white;
			padding: 10px;
			border: 1px solid palette-get(na-black-10);
			font-size: 10px;
			color: palette-get(na-black-40);
			z-index: 100;
		}
	}


}

